Deploy: add cfp component

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,7 +3,10 @@
 @import 'font';
 @import 'variable';
 
-body {
+@import 'cfp';
+
+#app {
   width: 100%;
+  min-height: 100vh;
   overflow-x: hidden;
 }
