--- a/src/assets/scss/_cfp.scss
+++ b/src/assets/scss/_cfp.scss
@@ -10,6 +10,14 @@
     width: calc(85% - 16rem);
     padding: 2rem 8rem;
     box-shadow: 0 0 10pt rgba($black, .3);
+    @media screen and (max-width: 900px) {
+      padding: 2rem;
+      width: calc(85% - 4rem);
+    }
+    @media screen and (max-width: 320px) {
+      padding: 2rem;
+      width: calc(100% - 4rem);
+    }
   }
 
   &-header {}
@@ -21,6 +29,9 @@
       font-weight: 600;
       font-size: 36px;
       margin: 3rem 0 2rem 0;
+      @media screen and (max-width: 320px) {
+        font-size: 32px;
+      }
     }
 
     h3 {
@@ -33,6 +44,7 @@
     p {
       font-size: 16px;
       margin-bottom: 1rem;
+      text-align: justify;
     }
 
     li {
