--- a/src/assets/scss/_font.scss
+++ b/src/assets/scss/_font.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/earlyaccess/notosanstc.css');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC:400,700');
 
 h1,
 h2,
@@ -11,7 +11,7 @@ p,
 ul,
 li,
 span {
-  line-height: 1.4;
+  line-height: 1.6;
   font-family: 'Noto Sans TC', sans-serif;
   font-weight: 400;
   letter-spacing: 1px;
