Layout: define selection area style

--- a/src/assets/scss/_cfp.scss
+++ b/src/assets/scss/_cfp.scss
@@ -3,6 +3,10 @@
     min-height: 200vh;
     display: flex;
     justify-content: center;
+    ::selection {
+      background-color: $sitcon;
+      color: $white;
+    }
   }
 
   &-paper-container {
