--- a/src/assets/scss/_cfp.scss
+++ b/src/assets/scss/_cfp.scss
@@ -1,3 +1,14 @@
+@keyframes boxJumpAppear {
+  from {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
 .cfp {
   &-main-container {
     min-height: 200vh;
@@ -340,6 +351,7 @@
       padding: 10pt;
       color: $content;
       cursor: pointer;
+      transition: all .3s;
 
       &:hover {
         box-shadow: 0 0 10pt rgba($black, .5);
@@ -382,6 +394,7 @@
       box-shadow: 0 0 3rem rgba($black, .5);
       border: 5px solid $gray;
       color: $content;
+      animation: boxJumpAppear .3s ease-in-out;
 
       @media screen and (max-width: 1400px) {
         width: 80%;
