--- a/src/assets/scss/_cfp.scss
+++ b/src/assets/scss/_cfp.scss
@@ -3,6 +3,7 @@
     transform: scale(0.1);
     opacity: 0;
   }
+
   to {
     transform: scale(1);
     opacity: 1;
@@ -14,6 +15,7 @@
     min-height: 200vh;
     display: flex;
     justify-content: center;
+
     ::selection {
       background-color: $sitcon;
       color: $white;
@@ -40,61 +42,43 @@
   &-header {
     display: flex;
     flex-direction: row;
+    position: relative;
 
     @media screen and (max-width: 768px) {
       flex-direction: row-reverse;
-      height: 35vh;
-
-      &:before {
-        content: '';
-        position: absolute;
-        width: 20rem;
-        height: 1px;
-        background-color: $content;
-        transform: rotate(45deg) translate(-5rem, 7rem);
-      }
-    }
-
-    @media screen and (max-width: 560px) {
-      &:before {
-        transform: rotate(45deg) translate(0, 5rem);
-      }
-    }
-
-    @media screen and (max-width: 475px) {
-      height: 20rem;
-
-      &:before {
-        transform: rotate(45deg) translate(0, 3rem);
-      }
     }
 
     .logo {
       width: 50%;
       padding: 2rem 0;
+      position: relative;
 
       @media screen and (max-width: 768px) {
+        position: absolute;
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
         text-align: right;
         padding: 0;
+        height: 100%;
       }
 
       @media screen and (max-width: 560px) {
-        width: 30%;
-      }
-
-      @media screen and (max-width: 475px) {
-        position: absolute;
         width: 100%;
       }
 
       img {
         width: 60%;
+        position: absolute;
+        z-index: 1;
 
         @media screen and (max-width: 1360px) {
           width: 80%;
+        }
+
+        @media screen and (max-width: 768px) {
+          width: 15rem;
         }
 
         @media screen and (max-width: 560px) {
@@ -103,35 +87,36 @@
       }
 
       .paper {
+        z-index: -1;
         border: 5px solid $content;
         border-radius: 0 0 1rem 1rem;
         border-width: 0 5px 5px 5px;
         padding: 10pt;
+        padding-top: 4rem;
         width: 10rem;
-        transform: translate(2rem, -1rem);
+        transform: translate(2rem, 5rem);
+        background-color: $white;
+
+        @media screen and (max-width: 1280px) {
+          padding-top: 3rem;
+        }
 
         @media screen and (max-width: 1080px) {
+          transform: translate(1rem, 3rem);
+          border-width: 0 4px 4px 4px;
           width: 8rem;
         }
 
         @media screen and (max-width: 768px) {
+          background: none;
           transform: none;
           padding: 0;
           border: none;
           width: 100%;
           margin-top: auto;
-        }
-
-        @media screen and (max-width: 475px) {
-          position: absolute;
-          margin: 0;
-          top: 17.5rem;
-        }
-
-        @media screen and (max-width: 400px) {
-          position: absolute;
-          margin: 0;
-          top: 18rem;
+          margin-bottom: 1rem;
+          z-index: 1;
+          text-align: center;
         }
 
         h1 {
@@ -139,13 +124,13 @@
           color: $sitcon;
           font-weight: 800;
           margin-bottom: 1rem;
+          line-height: 1.4;
 
           @media screen and (max-width: 1080px) {
             font-size: 30px;
           }
 
           @media screen and (max-width: 768px) {
-            color: $content;
             margin-bottom: 3pt;
 
             br {
@@ -178,29 +163,15 @@
       color: $content;
 
       @media screen and (max-width: 768px) {
-        margin-top: auto;
-      }
-
-      @media screen and (max-width: 560px) {
-        width: 70%;
-      }
-
-      @media screen and (max-width: 475px) {
+        margin-top: 6rem;
         width: 100%;
-        margin-bottom: 5rem;
-      }
-
-      @media screen and (max-width: 414px) {
-        margin-bottom: 3rem;
-      }
-
-      @media screen and (max-width: 375px) {
-        margin-bottom: 2rem;
+        margin-bottom: 6rem;
       }
 
       h1 {
         font-size: 100px;
         font-weight: 800;
+        line-height: 1.2;
 
         @media screen and (max-width: 1560px) {
           font-size: 90px
@@ -217,10 +188,6 @@
         @media screen and (max-width: 800px) {
           font-size: 40px;
         }
-
-        @media screen and (max-width: 768px) {
-          filter: drop-shadow(-3pt -3pt 0 rgba($content, .3));
-        }
       }
 
       .info-box {
@@ -233,15 +200,15 @@
           margin: 2rem 0;
         }
 
-        @media screen and (max-width: 768px) {
-          display: none;
-        }
-
         img {
           height: 6rem;
 
           @media screen and (max-width: 1260px) {
             height: 4rem;
+          }
+
+          @media screen and (max-width: 414px) {
+            height: 3rem;
           }
         }
 
@@ -282,13 +249,23 @@
         }
       }
     }
+
+    &:after {
+      display: block;
+      position: absolute;
+      bottom: 0;
+      width: 40%;
+      left: 30%;
+      content: '';
+      border: 3px solid $gray;
+    }
   }
 
   &-content {
     color: $content;
     padding: 0 8rem;
 
-    @media screen and (max-width: 1560px) {
+    @media screen and (max-width: 1400px) {
       padding: 0;
     }
 
@@ -318,6 +295,7 @@
     li {
       margin-left: 1.5rem;
       list-style-type: disc;
+
       @supports (-webkit-backdrop-filter: blur(1px)) {
         &:before {
           content: ' ';
@@ -338,13 +316,25 @@
 
   &-action {
     margin: 5rem 0;
+    padding: 0 8rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
+
+    @media screen and (max-width: 1400px) {
+      padding: 0
+    }
+
+    @media screen and (max-width: 1080px) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 2rem 0;
+    }
 
     .button {
-      margin: 2rem;
+      margin: 2rem 0;
       border: 7px solid $gray;
       border-radius: 1.5rem;
       width: calc(300px - 20pt);
@@ -355,6 +345,10 @@
 
       &:hover {
         box-shadow: 0 0 10pt rgba($black, .5);
+      }
+
+      @media screen and (max-width: 414px) {
+        width: calc(100% - 2rem);
       }
 
       h2 {
@@ -388,13 +382,26 @@
     &-content {
       width: 60%;
       height: 50%;
-      padding: 5rem;
+      padding: 3rem;
       background-color: $white;
       box-sizing: border-box;
       box-shadow: 0 0 3rem rgba($black, .5);
       border: 5px solid $gray;
       color: $content;
       animation: boxJumpAppear .3s ease-in-out;
+      position: relative;
+      min-height: 400px;
+
+      .close-btn {
+        position: absolute;
+        right: 3rem;
+        top: 3rem;
+
+        img {
+          height: 2rem;
+          width: 2rem;
+        }
+      }
 
       @media screen and (max-width: 1400px) {
         width: 80%;
@@ -415,7 +422,8 @@
       h2 {
         font-size: 36px;
         font-weight: 600;
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
+
         @media screen and (max-width: 414px) {
           font-size: 30px;
         }
@@ -423,14 +431,22 @@
 
       p {
         font-size: 18px;
+
         @media screen and (max-width: 414px) {
           font-size: 16px;
         }
+
         &.split {
           margin: 2rem 0;
           display: inline-flex;
           flex-direction: column;
           width: 45%;
+
+          span {
+            font-size: 24px;
+            margin-bottom: 1rem;
+          }
+
           @media screen and (max-width: 675px) {
             width: 100%;
             margin: 0;
@@ -440,11 +456,12 @@
       }
 
       a {
-        color: inherit;
+        color: $sitcon;
         text-decoration-color: transparent;
-        font-weight: 500;
+        font-weight: 700;
+
         &:hover {
-          text-decoration-color: $content;
+          text-decoration-color: $sitcon;
         }
       }
     }
